--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,7 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Mon Mar 08 14:38:48 CST 2021
-sdk.dir=C\:\\Users\\Ylarod\\AppData\\Local\\Android\\Sdk
+# For customization when using a Version Control System, please read the
+# header note.
+#Sat Apr 03 13:13:16 CST 2021
+sdk.dir=D\:\\SDK
